# usbd-serial

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  rust.yml
src/: buffer.rs  cdc_acm.rs  io.rs  lib.rs  serial_port.rs
