[package]
name = "usbd-serial"
description = "USB CDC-ACM serial port class for use with usb-device."
version = "0.2.2"
edition = "2018"
readme = "README.md"
keywords = ["no-std", "usb-device"]
license = "MIT"
authors = ["Matti Virkkunen <mvirkkunen@gmail.com>"]
repository = "https://github.com/mvirkkunen/usbd-serial"

[dependencies]
embedded-hal = "0.2.4"
nb = "1"
usb-device = "0.3"
embedded-io = "0.6"
